kubernetes/apps/default/home-assistant/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - name: http
      port: 8123
      targetPort: 8123
    - name: ha-code
      port: 8080
      targetPort: 8080
    - name: esphome-web
      port: 6052
      targetPort: 6052
