kubernetes/apps/default/home-assistant/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Home Assistant"
    gethomepage.dev/description: "Home automation"
    gethomepage.dev/group: "Home"
    gethomepage.dev/icon: "home-assistant.svg"
    gethomepage.dev/pod-selector: "app=home-assistant"
spec:
  hostnames:
    - "ha.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8123
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ha-code
spec:
  hostnames:
    - "ha-code.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esphome
spec:
  hostnames:
    - "esphome.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: home-assistant
          port: 6052
